<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_upcoming"
        android:icon="@drawable/ic_upcoming_black_24dp"
        android:title="@string/upcoming" />

    <item
        android:id="@+id/navigation_finished"
        android:icon="@drawable/ic_done_black_24dp"
        android:title="@string/finished" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_black_24"
        android:title="@string/favorite" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24"
        android:title="@string/setting" />
</menu>