<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/tv_title_setting"
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_dark_mode"
        style="@style/TextAppearance.Material3.TitleLarge"
        android:text="@string/dark_mode"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_title_setting"
        app:layout_constraintTop_toBottomOf="@id/tv_title_setting"
        app:layout_constraintEnd_toStartOf="@id/sw_dark_mode" />

    <TextView
        android:id="@+id/tv_dark_mode_desc"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_dark_mode"
        app:layout_constraintTop_toBottomOf="@id/tv_dark_mode"
        app:layout_constraintStart_toStartOf="@id/tv_dark_mode" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_dark_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_dark_mode"
        app:layout_constraintTop_toBottomOf="@id/tv_title_setting"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>