<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.home.HomeFragment">


    <TextView
        android:id="@+id/tv_title"
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dicoding_event"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_upcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_event"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view_upcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_upcoming">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_horizontal_upcoming"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </ScrollView>


    <TextView
        android:id="@+id/tv_title_finished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finished_event"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_view_upcoming" />

    <ScrollView
        android:id="@+id/scroll_view_finished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_finished">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_vertical_finished"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar_upcoming"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="@id/scroll_view_upcoming"
        app:layout_constraintBottom_toBottomOf="@id/scroll_view_upcoming"
        app:layout_constraintStart_toStartOf="@id/scroll_view_upcoming"
        app:layout_constraintEnd_toEndOf="@id/scroll_view_upcoming" />

    <ProgressBar
        android:id="@+id/progress_bar_finished"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toTopOf="@id/scroll_view_finished"
        app:layout_constraintBottom_toBottomOf="@id/scroll_view_finished"
        app:layout_constraintStart_toStartOf="@id/scroll_view_finished"
        app:layout_constraintEnd_toEndOf="@id/scroll_view_finished" />
</androidx.constraintlayout.widget.ConstraintLayout>